[package]
name = "sdkwork-knowledgebase-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dependencies]
axum.workspace = true
http = "1"
sdkwork-knowledgebase-contract.workspace = true
sdkwork-utils-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tower.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror.workspace = true
uuid = { version = "1", features = ["v4"] }
sdkwork-web-bootstrap = { workspace = true, features = ["sqlx"] }
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
