[package]
name = "sdkwork-knowledgebase-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sdkwork-knowledgebase-standalone-gateway"
path = "src/bin/app_main.rs"

[dependencies]
sdkwork-knowledgebase-gateway-assembly.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
sdkwork-knowledgebase-observability = { workspace = true, features = ["otel"] }
