[package]
name = "sdkwork-knowledgebase-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sdkwork-knowledgebase-standalone-gateway"
path = "src/bin/app_main.rs"

[dependencies]
sdkwork-knowledgebase-gateway-assembly.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower.workspace = true
tracing = "0.1"
sdkwork-knowledgebase-observability = { workspace = true, features = ["otel"] }
sdkwork-knowledgebase-agent-provider.workspace = true
sdkwork-knowledgebase-im-rpc-adapter.workspace = true
sdkwork-rpc-core.workspace = true
sdkwork-utils-rust.workspace = true
thiserror.workspace = true
