[package]
name = "sdkwork-knowledgebase-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-product.workspace = true
sha2.workspace = true
tokio.workspace = true
