[package]
name = "sdkwork-knowledgebase-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-utils-rust.workspace = true
serde_json.workspace = true
tokio.workspace = true
