[package]
name = "sdkwork-knowledgebase-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_knowledgebase_worker"
path = "src/lib.rs"

[[bin]]
name = "sdkwork-knowledgebase-worker"
path = "src/bin/worker_main.rs"

[dependencies]
axum.workspace = true
sdkwork-intelligence-knowledgebase-service = { workspace = true }
sdkwork-knowledgebase-api-server = { path = "../sdkwork-knowledgebase-api-server" }
sdkwork-knowledgebase-observability = { path = "../sdkwork-knowledgebase-observability", features = ["otel"] }
sdkwork-routes-knowledgebase-app-api = { path = "../sdkwork-routes-knowledgebase-app-api" }
sdkwork-web-bootstrap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
