[package]
name = "sdkwork-knowledgebase-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sdkwork_knowledgebase_worker"
path = "src/lib.rs"

[[bin]]
name = "sdkwork-knowledgebase-worker"
path = "src/bin/worker_main.rs"

[[bin]]
name = "sdkwork-knowledgebase-provider-binding-prelaunch-report"
path = "src/bin/provider_binding_prelaunch_report.rs"

[dependencies]
axum.workspace = true
sdkwork-intelligence-knowledgebase-service = { workspace = true }
sdkwork-intelligence-knowledgebase-repository-sqlx.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-api-knowledgebase-standalone-gateway.workspace = true
sdkwork-knowledgebase-observability = { workspace = true, features = ["otel"] }
sdkwork-routes-knowledgebase-app-api.workspace = true
sdkwork-web-bootstrap.workspace = true
serde_json.workspace = true
serde.workspace = true
sdkwork-utils-rust.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "any", "sqlite"] }
tower.workspace = true
sdkwork-routes-knowledgebase-backend-api.workspace = true
