[package]
name = "sdkwork-router-knowledgebase-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-intelligence-knowledgebase-service.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
