[package]
name = "sdkwork-router-knowledgebase-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-knowledgebase-contract.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
