[package]
name = "sdkwork-routes-knowledgebase-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-knowledgebase-drive.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-routes-knowledgebase-backend-api = { path = "../sdkwork-routes-knowledgebase-backend-api" }
sdkwork-routes-knowledgebase-open-api = { path = "../sdkwork-routes-knowledgebase-open-api" }
sdkwork-drive-storage-local = { path = "../../../sdkwork-drive/crates/sdkwork-drive-storage-local" }
sdkwork-intelligence-knowledgebase-service.workspace = true
sdkwork-intelligence-knowledgebase-repository-sqlx.workspace = true
sdkwork_database_config.workspace = true
sdkwork-knowledgebase-agent-provider.workspace = true
sdkwork-knowledgebase-engine-dify.workspace = true
sdkwork-knowledgebase-engine-ragflow.workspace = true
sdkwork-knowledgebase-engine-onyx.workspace = true
sdkwork-knowledgebase-engine-anythingllm.workspace = true
sdkwork-knowledgebase-engine-open-webui.workspace = true
sdkwork-knowledgebase-engine-flowise.workspace = true
sdkwork-knowledgebase-engine-qdrant.workspace = true
sdkwork-knowledgebase-engine-weaviate.workspace = true
sdkwork-knowledgebase-engine-haystack.workspace = true
sdkwork-knowledgebase-engine-chroma.workspace = true
clawrouter-open-sdk.workspace = true
sdkwork-agent-kernel.workspace = true
sdkwork-knowledgebase-observability.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
tower.workspace = true
serde_json.workspace = true
wiremock.workspace = true
sdkwork-knowledgebase-observability.workspace = true
sdkwork-knowledgebase-worker = { path = "../sdkwork-knowledgebase-worker" }
sdkwork-knowledgebase-contract.workspace = true
