[package]
name = "sdkwork-routes-knowledgebase-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-knowledgebase-observability.workspace = true
sdkwork-knowledgebase-contract.workspace = true
sdkwork-intelligence-knowledgebase-repository-sqlx.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap = { workspace = true, features = ["sqlx"] }
sdkwork-web-core.workspace = true
sdkwork-web-store-redis = { workspace = true }
sdkwork-web-store-sqlx = { workspace = true, features = ["sqlite", "postgres"] }
sdkwork_utils_rust.workspace = true
tokio = { workspace = true, features = ["sync"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any"] }

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
sdkwork-web-core.workspace = true
